[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Register.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 95
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 21
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 21
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 21
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="Register" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 256.0, 328.0, 400.0, 472.0 ],
"_edit_vertical_guides_": [ 496.0, 544.0 ]
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="Title" type="Label" parent="."]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Register"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompleteName" type="Label" parent="."]
margin_left = 72.0
margin_top = 272.0
margin_right = 471.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 3 )
text = "E-mail:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="Label" parent="."]
margin_left = 242.0
margin_top = 342.0
margin_right = 473.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 4 )
text = "Password:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Label" parent="."]
margin_left = 32.0
margin_top = 414.0
margin_right = 473.0
margin_bottom = 435.0
custom_fonts/font = SubResource( 5 )
text = "Confirm password:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
margin_left = 73.7183
margin_top = 533.419
margin_right = 937.718
margin_bottom = 554.419
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.690196, 0.0235294, 0.0235294, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0 )

[node name="register" type="Button" parent="."]
margin_left = 714.657
margin_top = 579.284
margin_right = 957.657
margin_bottom = 616.284
custom_fonts/font = SubResource( 6 )
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_Email" type="LineEdit" parent="."]
margin_left = 511.0
margin_top = 258.0
margin_right = 799.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 7 )
max_length = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_Pass1" type="LineEdit" parent="."]
margin_left = 510.0
margin_top = 326.0
margin_right = 798.0
margin_bottom = 366.0
custom_fonts/font = SubResource( 7 )
max_length = 40
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_Pass2" type="LineEdit" parent="."]
margin_left = 510.0
margin_top = 398.0
margin_right = 798.0
margin_bottom = 438.0
custom_fonts/font = SubResource( 7 )
max_length = 40
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="register" to="." method="_on_register_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
